crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_constraint_check__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "overrides": [],
    "uri": "<BOOK>/examples/coffee-machine/definitions.sysml"
  },
  "response": []
}
